<resources>
    <string name="app_name">Bengal Services</string>

    <string name="app_id">ca-app-pub-7920815986886474~5118180608</string>

    <string name="app_open">ca-app-pub-7920815986886474/9916045869</string>
    <string name="full">ca-app-pub-7920815986886474/3228468145</string>
    <string name="banner">ca-app-pub-7920815986886474/4761041665</string>
    <string name="ad_native">ca-app-pub-7920815986886474/2524188968</string>

    <string name="rationCard">Ration Card</string>
    <string name="voterCard">Voter Identity</string>
    <string name="aawaasList">PM Awas Yojna List</string>

    <string name="changeLang">Change Language</string>

    <string name="eRationCard">E-Ration Card</string>
    <string name="rationVerify">Verify Ration Card</string>
    <string name="rationEntitle">Know Your Entitlement</string>
    <string name="rationLink">Ration Aadhaar Link</string>
    <string name="searchRation">Search Ration Card Details</string>
    <string name="statusRation">Check Ration Card Status</string>
    <string name="rationApply">New Ration Card Apply</string>
    <string name="rationForms">Ration Card Forms</string>
    <string name="rationAdd">Ration Card Member Addition</string>
    <string name="rationChange">Change in Ration Card</string>
    <string name="rationDuplicate">Duplicate Ration Card</string>
    <string name="rationFPS">Ration FPS Change</string>
    <string name="rationDelete">Delete Ration Card</string>
    <string name="rationCategory">Ration Change Category Apply</string>
    <string name="rationNearest">Nearest Ration FPS</string>
    <string name="rationCount">View Ration Count</string>
    <string name="rationWhole">Ration FPS Dealers</string>

    <string name="applyOnline">Apply Online</string>
    <string name="downloadVoter">Download Voter Card</string>
    <string name="editVoter">Edit Voter Card</string>
    <string name="searchVoter">Search Voter</string>
    <string name="trackApp">Track Application</string>
    <string name="reprint">Voter Card Reprint</string>
    <string name="voterOfficial">Voter Card Services</string>

    <string name="beneficiaryList">Beneficiary List</string>
    <string name="awasList">New Awas List</string>
    <string name="searchBeneficiary">Search Beneficiary</string>

</resources>