<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AwasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btnBeneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beneficiaryList"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnAwas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/awasList"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchBeneficiary"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/icon_backspace"
        android:backgroundTint="#7f004487"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>